# DELPHI_Intro_to_NLP_Spring_2024

./: .gitignore  README.md  setup.py
data/pneumonia_data/: test.pkl  test_preprocessed.pkl  train.pkl  train_preprocessed.pkl
delphi_nlp_2024/: __init__.py  helpers.py  pyproject.toml
delphi_nlp_2024/quizzes/: __init__.py  quizzes.py
media/: header.html
notebooks/: 00-Roadmap-Module-1.ipynb  01-Python-Essentials.ipynb  02-Strings-Methods.ipynb  03-Regular-Expressions.ipynb  04-NLP-with-medspaCy.ipynb  05-Attribute-Detection.ipynb  06-Pneumonia-Classification.ipynb  07-Train_a_language_model.ipynb  08-Fine_tuning_text_Classification_for_Pneumonia.ipynb
notebooks_complete/: 00-Prepare-Pneumonia-Documents-Copy1.ipynb  00-Prepare-Pneumonia-Documents.ipynb  00-Roadmap-Module-1.ipynb  01-Python-Essentials-complete.ipynb  01-Python-Essentials.ipynb  02-Clinical-Text-instructor.ipynb  03-Regular-Expressions-complete.ipynb  03-Strings-Methods-complete.ipynb  03-Strings-Methods-instructor.ipynb  03-Strings-Methods.ipynb  04-NLP-with-medspaCy-complete.ipynb  04-NLP-with-medspaCy-instructor.ipynb  05-Attribute-Detection.ipynb  05-Attribute-Detection_complete.ipynb  05-Attribute-Detection_instructor.ipynb  05-NLP-Exercises_instructor.ipynb  06-Pneumonia-Classification-complete.ipynb  06-Pneumonia-Classification.ipynb  _04-NLP-with-medspaCy.ipynb  _05-Attribute-Detection.ipynb
slides/: 2024_Delphi_NLP_with_ML_Part_1.pptx  2024_Delphi_NLP_with_ML_Part_2.pptx
